libs/@local/hashql/ast/tests/ui/lowering/special-form-expander/use-struct-literal.jsonc
//@ run: fail
//@ description: any value that isn't an identifier should fail
[
  "::kernel::special_form::use",
  "::math",
  {
    "#struct": {
      "x": { "#literal": 1 }
      //~^ ERROR Replace with a valid import expression
    }
  },
  "x"
]
